correct the spelling of "Physical" in the tutorial title

--- a/notebooks/tutorial_triggers.ipynb
+++ b/notebooks/tutorial_triggers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Guide to Sending Tonic and Physical (Phasic) Triggers from PsychoPy to a DSI-24 EEG System\n",
+    "# Guide to Sending Tonic and Phasic Triggers from PsychoPy to a DSI-24 EEG System\n",
     "\n",
     "**Author:** *Sina Esmaeili*  \n",
     "**Date:** *January 13, 2025*  \n",
