refactor tutorial structure and headings for clarity and consistency

--- a/notebooks/Guide to Sending Tonic and Phasic Triggers from PsychoPy to a DSI-24 EEG System.ipynb
+++ b/notebooks/Guide to Sending Tonic and Phasic Triggers from PsychoPy to a DSI-24 EEG System.ipynb
@@ -4,14 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Guide to Sending Tonic and Phasic Triggers from PsychoPy to a DSI-24 EEG System\n",
     "\n",
-    "**Author:** *Sina Esmaeili*  \n",
-    "**Date:** *January 13, 2025*  \n",
     "\n",
-    "---\n",
-    "\n",
-    "## 1. Introduction\n",
+    "# Introduction\n",
     "\n",
     "In many EEG experiments, it’s essential to send **event markers** (also called *triggers*) from your behavioral task software (e.g., **PsychoPy**) to your EEG amplifier (e.g., **DSI-24**). These markers help you align the recorded EEG signals with specific events in your paradigm (e.g., stimulus onsets, responses, condition changes).\n",
     "\n",
@@ -30,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Background on DSI-24 and Triggering\n",
+    "# Background on DSI-24 and Triggering\n",
     "\n",
-    "### 1.1 Hardware and Serial Communication\n",
+    "## Hardware and Serial Communication\n",
     "\n",
     "The **DSI-24** system is a wireless EEG headset that can receive numeric trigger values through a specialized interface (often via a **serial port** or other I/O device). These numeric codes are recorded in parallel with the EEG data, allowing you to later identify exactly when certain events occurred.\n",
-    "### 2.1 Physical Connection\n",
+    "## Physical Connection\n",
     "- You typically connect your computer (running PsychoPy) to the DSI system’s data acquisition software (like **DSI-Streamer**) via a USB-to-serial interface or a dedicated trigger interface. When you connect the USB-to-serial interface to the DSI and also the Pscyhopy system you need to find the COM port associated with the USB-to-serial interface in the system using the Psychopy. \n",
     "\n",
     "**Finding Your COM Port**  \n",
@@ -52,7 +47,7 @@
     "  2. Type `ls /dev/tty.*` or `ls /dev/cu.*` to list serial devices.  \n",
     "  3. Look for something referencing `usbserial` or similar.\n",
     "\n",
-    "### 2.2 Opening the Serial Port\n",
+    "## Opening the Serial Port\n",
     "\n",
     "Use Python’s built-in `serial` library (or `pyserial`) in your PsychoPy script to open and configure the port. \n",
     "Example:\n",
@@ -73,17 +68,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Tonic vs. Phasic Triggers: When to Use Which?\n",
+    "# Tonic vs. Phasic Triggers: When to Use Which?\n",
     "\n",
     "In EEG experiments, triggers mark key moments in your task so that recorded brain signals can be linked back to specific events or conditions. Two main styles are commonly used: **Tonic** (sustained) triggers and **Phasic** (brief) triggers. Choosing the right approach depends on how long your events last, how precisely you need to mark them, and what your subsequent analysis requires.\n",
     "\n",
     "\n",
-    "### 3.1 Tonic (Sustained) Triggers\n",
+    "## Tonic (Sustained) Triggers\n",
     "\n",
-    "#### Definition\n",
+    "### Definition\n",
     "A **tonic trigger** is set to a nonzero value at the start of an event or condition—such as a block of trials or a prolonged task state—and remains at that value until you explicitly reset it to zero.\n",
     "\n",
-    "#### When to Use Tonic Triggers\n",
+    "### When to Use Tonic Triggers\n",
     "- **Long Blocks/States**  \n",
     "  If your experiment has extended intervals (e.g., a 2-minute “Task” vs. a 2-minute “Rest”), a tonic trigger continuously indicates which block is active.  \n",
     "- **Multi-Step Trials**  \n",
@@ -91,21 +86,21 @@
     "- **Neurofeedback or Closed-Loop**  \n",
     "  Real-time systems often benefit from a constant marker to distinguish “active task” versus “baseline” phases.\n",
     "\n",
-    "#### Pros\n",
+    "### Pros\n",
     "- **Easy to Visualize**: You can see in the raw data exactly when a condition is active.  \n",
     "- **Simpler Setup for Long Durations**: Once you set the trigger, it stays high until you change it.\n",
     "\n",
-    "#### Cons\n",
+    "### Cons\n",
     "- **Must Remember to Reset**: Forgetting to reset could cause confusion in later blocks.  \n",
     "- **Less Precision**: Not ideal for capturing brief events that occur within the sustained period.\n",
     "\n",
     "\n",
-    "### 3.2 Phasic (Brief) Triggers\n",
+    "## Phasic (Brief) Triggers\n",
     "\n",
-    "#### Definition\n",
+    "### Definition\n",
     "A **phasic trigger** is a short pulse (e.g., 10–50 ms) that is turned on at a specific moment—like stimulus onset or a button press—and then immediately turned back off.\n",
     "\n",
-    "#### When to Use Phasic Triggers\n",
+    "### When to Use Phasic Triggers\n",
     "- **Discrete Stimulus Onsets**  \n",
     "  In many ERP (Event-Related Potential) studies (e.g., P300 paradigms), each stimulus is marked by a quick pulse for precise time-locking.  \n",
     "- **Rapid-Fire Events**  \n",
@@ -113,16 +108,16 @@
     "- **Short Tasks**  \n",
     "  If a stimulus or response is short-lived (like a quick beep or flash), a short trigger pulse aligns with it neatly.\n",
     "\n",
-    "#### Pros\n",
+    "### Pros\n",
     "- **High Temporal Precision**: Excellent for analyzing reaction times or detecting ERP components.  \n",
     "- **Reduces Overlap**: The trigger resets to 0 quickly, so you won’t accidentally obscure the next event.\n",
     "\n",
-    "#### Cons\n",
+    "### Cons\n",
     "- **No Long-Duration Indication**: You lose a continuous marker of an extended condition or block.  \n",
     "- **Hardware Sensitivity**: Some EEG amplifiers require a minimum pulse width (e.g., 10 ms) to reliably detect the trigger.\n",
     "\n",
     "\n",
-    "### 3.3 Choosing the Right Approach\n",
+    "## Choosing the Right Approach\n",
     "\n",
     "- **Experiment Duration**  \n",
     "  - If your event or block lasts seconds to minutes and you want to visualize that entire period in the data, use **tonic**.  \n",
@@ -134,7 +129,7 @@
     "  Many experiments combine both: a tonic trigger to denote the overall block (e.g., “Condition A”), plus phasic triggers to mark each stimulus or response within that block.\n",
     "\n",
     "\n",
-    "### 3.4 Summary\n",
+    "## Summary\n",
     "\n",
     "- **Tonic = Sustained** marker (high throughout a block or long event).  \n",
     "- **Phasic = Brief Pulse** (ideal for short, discrete events).  \n",
@@ -149,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Immediate vs. On-Flip Trigger Timing\n",
+    "# Immediate vs. On-Flip Trigger Timing\n",
     "\n",
     "Beyond selecting **tonic** or **phasic** triggers, you also need to decide **when** in the PsychoPy drawing cycle these triggers should be sent. Timing can be handled in two main ways:\n",
     "\n",
@@ -160,7 +155,7 @@
     "Why does this matter? In EEG and psychophysics, you often want to **synchronize** your triggers with **visual events**. If your display updates at a certain frame, sending a trigger “immediately” may not perfectly align with that visual onset. Conversely, if the trigger is not tied to any visual event (e.g., it’s only marking an internal logic change or a participant’s key press), an immediate trigger might suffice.\n",
     "\n",
     "\n",
-    "### 4.1 Immediate Trigger Calls\n",
+    "## Immediate Trigger Calls\n",
     "\n",
     "**When do they happen?**  \n",
     "They occur exactly at the line in your code where you call the trigger function—there’s no waiting for a screen refresh.\n",
@@ -176,7 +171,7 @@
     "    send_trigger_phasic(ser, 10, dur=0.01)\n",
     "```\n",
     "\n",
-    "### 4.2 On-Flip Trigger Calls\n",
+    "## On-Flip Trigger Calls\n",
     "\n",
     "**When do they happen?**  \n",
     "At the **next screen refresh**—the moment `win.flip()` executes in PsychoPy.\n",
@@ -197,7 +192,7 @@
     "Here, the trigger sets to value 20 exactly when the screen buffers swap, meaning the participant sees the new stimulus and the EEG marker changes in the same instant.\n",
     "\n",
     "\n",
-    "### 4.3 Choosing the Optimal Timing Approach\n",
+    "## Choosing the Optimal Timing Approach\n",
     "1. **Immediate**:\n",
     "\n",
     "- Simpler for marking background logic, user responses, or anything not explicitly tied to the next screen refresh.\n",
@@ -219,11 +214,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Implementation: Tonic & Phasic Trigger Functions\n",
+    "# Implementation: Tonic & Phasic Trigger Functions\n",
     "\n",
     "Having seen the differences between **Tonic** vs. **Phasic** triggers (Section 3) and **Immediate** vs. **On-Flip** timing (Section 4), you’re now ready to integrate these concepts into your own PsychoPy experiments. Below, you’ll find **ready-to-use** Python functions that illustrate how to send triggers via a serial port in both a phasic (brief) and tonic (sustained) manner, as well as how to schedule them **immediately** or **at the next screen flip**.\n",
     "\n",
-    "### 5.1 Overview of Provided Functions\n",
+    "##  Overview of Provided Functions\n",
     "\n",
     "1. **Phasic (Brief) Triggers**  \n",
     "   - `send_trigger_phasic(ser, data, dur=0.01)`  \n",
@@ -245,10 +240,7 @@
     "\n",
     "Each code snippet below includes a docstring describing how it works, the arguments it takes, and typical usage notes.\n",
     "\n",
-    "### 5.2 Code Snippets\n",
-    "\n",
-    "\n",
-    "\n",
+    "## Code Snippets\n",
     "\n",
     "```python\n",
     "\n",
@@ -383,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3 Practical Tips for Using These Functions\n",
+    "## Practical Tips for Using These Functions\n",
     "\n",
     "1. **Initialize Your Serial Port First**  \n",
     "\n",
@@ -430,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Example Task: Go/No-Go on Pavlovia\n",
+    "# Example Task: Go/No-Go on Pavlovia\n",
     "\n",
     "This section demonstrates how to incorporate triggers (both **phasic** and **tonic**) into a **Go/No-Go** experiment. The same logic applies to any other task; simply adapt the code for your events and conditions. We’ve also uploaded an example task to Pavlonia for the [Phasic](https://gitlab.pavlovia.org/smilingdevil/gonogo_phasic_triggers) and [Tonic](https://gitlab.pavlovia.org/smilingdevil/gonogo_tonic_triggers) approach so you can see the implementation in action.\n"
    ]
@@ -439,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1 High-Level Task Flow\n",
+    "## High-Level Task Flow\n",
     "\n",
     "A typical **Go/No-Go** experiment might follow these steps:\n",
     "\n",
@@ -464,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.2 Adding Triggers in PsychoPy’s Builder\n",
+    "## Adding Triggers in PsychoPy’s Builder\n",
     "\n",
     "We’ll assume you have a Builder setup with:\n",
     "- A routine named **“trial”** for each Go/No-Go stimulus presentation.\n",
@@ -477,7 +469,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### 2.2.1 “Begin Experiment” Tab\n",
+    "### “Begin Experiment” Tab\n",
     "\n",
     "In your Code Component’s **“Begin Experiment”** section in the `Welcome` routine, define the list of triggers and your functions as explained in Section 5.2, based on the type of trigger you are using (Phasic or tonic)."
    ]
@@ -593,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2.2 “Begin Routine” Tab (Stimulus Onset)\n",
+    "### “Begin Routine” Tab (Stimulus Onset)\n",
     "\n",
     "In the **“Begin Routine”** tab of your `trial` routine’s Code Component, you can decide how to mark stimulus onset. For instance, if your trial dictionary is named `thisTrial` and has a key `'this_image'`:\n"
    ]
@@ -649,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2.3 “End Routine” Tab (Response Evaluation)\n",
+    "### “End Routine” Tab (Response Evaluation)\n",
     "After the participant responds (or doesn’t), you can mark correct vs. incorrect outcomes. To implement this in the **“End Routine”** tab of the `trial` routine you can use the following code: "
    ]
   },
